Introduce translation text for expand button

--- a/app/src/engine/translations/en.json
+++ b/app/src/engine/translations/en.json
@@ -1,4 +1,5 @@
 {
     "duration-header": "You spent here",
-    "expand-button-label": "More"
+    "expand-button-label": "More",
+    "shrink-button-label": "Less"
 }
