--- a/app/src/engine/translations/pl.json
+++ b/app/src/engine/translations/pl.json
@@ -1,4 +1,5 @@
 {
     "duration-header": "Spędziłeś tutaj",
-    "expand-button-label": "Więcej"
+    "expand-button-label": "Więcej",
+    "shrink-button-label": "Mniej"
 }
