Add more translations: ES, DE, FR

--- a/app/src/engine/translations/en.json
+++ b/app/src/engine/translations/en.json
@@ -1,5 +1,5 @@
 {
-    "duration-header": "You spent here",
+    "duration-header": "Spent here",
     "expand-button-label": "More",
     "shrink-button-label": "Less"
 }
