--- a/app/src/engine/translations/pl.json
+++ b/app/src/engine/translations/pl.json
@@ -1,5 +1,5 @@
 {
-    "duration-header": "Spędziłeś tutaj",
+    "duration-header": "Spędzono tutaj",
     "expand-button-label": "Więcej",
     "shrink-button-label": "Mniej"
 }
